--- a/index.html
+++ b/index.html
@@ -4,11 +4,26 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Carro</title>
-  <meta name="description" content="Carro de alta precisão e qualidade. Explore o mundo na sua velocidade com o novo carro modelo R8">
+  <title>Bicicleta</title>
+  <meta name="description" content="Bicicleta de alta precisão e qualidade. Explore o mundo na sua velocidade com o modelo R8">
 
   <link rel="stylesheet" href="./css/style.css">
 </head>
+<header class="header-bg">
+  <div class="header">
+    <a href="./">
+      <img src="/img/bikcraft.svg" alt="logo">
+    </a>
+
+    <nav aria-label="primaria">
+      <ul class="header-menu">
+        <li> <a href="./carro.html">Bicicletas</a></li>
+        <li> <a href="./seguros.html">Seguros</a></li>
+        <li> <a href="./contato.html">Contato</a></li>
+      </ul>
+    </nav>
+  </div>
+</header>
 
 <body>
 
