--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Bikcraft - Bicicletas Elétricas</title>
   <meta name="description" content="Bicicletas elétricas de alta precisão e qualidade,  feitas sob medida para o cliente. Explore o mundo na sua velocidade com a Bikcraft.">
 
-  <link href="./css/stylemin.css" rel="stylesheet">
+  <link href="./css/style.min.css" rel="stylesheet">
   <link rel="preload" href="./css/style.min.css" as="style">
   <link rel="icon" href="./favicon.svg" type="">
   <link rel="preconnect" href="https://fonts.googleapis.com">
